# Rolling_Panda-for-dynamic-vines

control/: CMakeLists.txt  package.xml
control/src/: ReachPoseGoal.msg  Untitled Document  client_arm.py  client_base.py  client_camera.py  move.cpp  panda_wp.py  reading_joints.py  sub.py  subsciber.cpp  task_1.py  trajectory.cpp
rolling_panda_opensot/: CMakeLists.txt  package.xml
rolling_panda_opensot/cartesio/controllers/: SimpleIkController.cpp
rolling_panda_opensot/cartesio/problems/: panda_simple_stack.yaml
rolling_panda_opensot/configs/: controller.yaml  joint_names.yaml  panda.yaml  panda_control.yaml  panda_example.yaml  tree.yaml
rolling_panda_opensot/launch/: controller.launch  controller_utlis.launch  mydata.txt  panda.launch  panda_cartesian_controller.launch  panda_gazebo.launch  panda_slider.launch  tree.launch
rolling_panda_opensot/plugins/SimpleHoming/SimpleHoming/: SimpleHoming_plugin.h
